--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@firebase/firestore": "^4.3.2",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@react-google-maps/api": "^2.19.2",
     "bootstrap": "^5.3.2",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
