--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@firebase/firestore": "^4.3.2",
+    "@fontsource-variable/red-hat-display": "^5.0.21",
     "@million/lint": "^1.0.0-rc.26",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
